stock transaction enhancement, convertion fixing in progress
