# docs/swagger.json
@@ -1137,6 +1137,52 @@
                 }
             }
         },
+        "/api/dashboards/count": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Count dashboard",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "dashboard"
+                ],
+                "summary": "Count dashboard",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.DashboardResponseDoc"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.errorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/response.errorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/orders": {
             "get": {
                 "security": [
@@ -1207,6 +1253,11 @@
                         "type": "string",
                         "description": "join",
                         "name": "customer_name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "customer_phone",
                         "in": "query"
                     },
                     {
@@ -3107,6 +3158,11 @@
                         "type": "string",
                         "name": "name",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "reminder_type",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -3987,6 +4043,178 @@
             }
         },
         "/api/stocks/convertion": {
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Convertion stock",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "stock"
+                ],
+                "summary": "Convertion stock",
+                "parameters": [
+                    {
+                        "description": "request body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.ConvertionStockRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.StockConvertionResponseDoc"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.errorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/response.errorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/stocks/history": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get stock history",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "stock history"
+                ],
+                "summary": "Get stock history",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "page_size",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "search",
+                        "in": "query"
+                    },
+                    {
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        },
+                        "example": [
+                            "asc_column",
+                            "-dsc_column"
+                        ],
+                        "name": "sort_by",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "code",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "created_at",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "created_by",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "modified_at",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "modified_by",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "order_trx_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "trx_type",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.StockResponseDoc"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.errorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/response.errorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/stocks/movement": {
             "put": {
                 "security": [
                     {
@@ -5622,6 +5850,56 @@
                 }
             }
         },
+        "dto.DashboardOrderDailyResponse": {
+            "type": "object",
+            "properties": {
+                "day": {
+                    "type": "string"
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
+        "dto.DashboardResponse": {
+            "type": "object",
+            "properties": {
+                "order_daily": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.DashboardOrderDailyResponse"
+                    }
+                },
+                "total_brand": {
+                    "type": "integer"
+                },
+                "total_order": {
+                    "type": "integer"
+                },
+                "total_product": {
+                    "type": "integer"
+                },
+                "total_stock": {
+                    "type": "integer"
+                }
+            }
+        },
+        "dto.DashboardResponseDoc": {
+            "type": "object",
+            "properties": {
+                "body": {
+                    "type": "object",
+                    "properties": {
+                        "data": {
+                            "$ref": "#/definitions/dto.DashboardResponse"
+                        },
+                        "meta": {
+                            "$ref": "#/definitions/response.Meta"
+                        }
+                    }
+                }
+            }
+        },
         "dto.LoginAuthRequest": {
             "type": "object",
             "required": [
@@ -6037,6 +6315,9 @@
                 },
                 "name": {
                     "type": "string"
+                },
+                "reminder_type": {
+                    "type": "string"
                 }
             }
         },
@@ -6340,9 +6621,29 @@
                 }
             }
         },
+        "dto.StockTransactionProductResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "lookup_codes": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
         "dto.StockTransactionResponse": {
             "type": "object",
             "properties": {
+                "products": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.StockTransactionProductResponse"
+                    }
+                },
                 "status": {
                     "type": "string"
                 }
@@ -6383,6 +6684,14 @@
                     "type": "string"
                 },
                 "stock_lookup_ids": {
+                    "description": "only for type out",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "stock_trx_item_lookup_ids": {
+                    "description": "only for type in, optional",
                     "type": "array",
                     "items": {
                         "type": "string"
@@ -6397,6 +6706,9 @@
                 "trx_type"
             ],
             "properties": {
+                "order_trx_id": {
+                    "type": "string"
+                },
                 "products": {
                     "type": "array",
                     "minItems": 1,
@@ -6728,7 +7040,8 @@
                 "action",
                 "price",
                 "product_id",
-                "quantity"
+                "status",
+                "total"
             ],
             "properties": {
                 "action": {
@@ -6748,9 +7061,11 @@
                 "product_id": {
                     "type": "string"
                 },
-                "quantity": {
-                    "type": "integer",
-                    "minimum": 1
+                "rack_id": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
                 },
                 "stock_lookups": {
                     "type": "array",
@@ -6758,8 +7073,9 @@
                         "$ref": "#/definitions/dto.UpsertOrderItemLookupRequest"
                     }
                 },
-                "stock_rack_id": {
-                    "type": "string"
+                "total": {
+                    "type": "integer",
+                    "minimum": 1
                 }
             }
         },
@@ -7041,6 +7357,9 @@
                 },
                 "customer_name": {
                     "description": "join",
+                    "type": "string"
+                },
+                "customer_phone": {
                     "type": "string"
                 },
                 "final_price": {
@@ -7392,6 +7711,95 @@
                     }
                 },
                 "toital": {
+                    "type": "integer"
+                }
+            }
+        },
+        "entity.StockTrxItemLookupModel": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "created_by": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "is_seal": {
+                    "type": "boolean"
+                },
+                "modified_at": {
+                    "type": "string"
+                },
+                "modified_by": {
+                    "type": "string"
+                },
+                "remaining_value": {
+                    "type": "number"
+                },
+                "remaining_value_before": {
+                    "type": "number"
+                },
+                "stock_rack_id": {
+                    "description": "fk",
+                    "type": "string"
+                },
+                "stock_trx_item_id": {
+                    "description": "fk",
+                    "type": "string"
+                },
+                "value": {
+                    "type": "number"
+                }
+            }
+        },
+        "entity.StockTrxItemModel": {
+            "type": "object",
+            "properties": {
+                "convert_type": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "created_by": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "modified_at": {
+                    "type": "string"
+                },
+                "modified_by": {
+                    "type": "string"
+                },
+                "product_id": {
+                    "type": "string"
+                },
+                "stock_id": {
+                    "type": "string"
+                },
+                "stock_trx_id": {
+                    "description": "fk",
+                    "type": "string"
+                },
+                "stock_trx_item_lookups": {
+                    "description": "relations",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entity.StockTrxItemLookupModel"
+                    }
+                },
+                "total_not_seal": {
+                    "type": "integer"
+                },
+                "total_seal": {
                     "type": "integer"
                 }
             }
